--- a/package.json
+++ b/package.json
@@ -9,15 +9,53 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "flowbite": "^1.6.3",
+    "i18n": "^0.15.1",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.1.6",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.1.4",
+    "react-redux": "^8.0.5",
+    "react-select": "^5.7.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.2",
+    "swiper": "^9.0.1",
+    "tailwindcss-rtl": "^0.9.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/react-currency-formatter": "^1.1.4",
+    "@types/redux-logger": "^3.0.9",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
