--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.8",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@next-auth/firebase-adapter": "^1.0.3",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -23,8 +24,10 @@
     "@types/node": "18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "18.0.10",
+    "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^9.17.1",
     "flowbite": "^1.6.3",
     "i18n": "^0.15.1",
     "i18next": "^22.4.9",
@@ -33,6 +36,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
