--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
       "@/styles/*": ["styles/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/api/auth/[...nextAuth].js"],
   "exclude": ["node_modules"]
 }
