--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next-auth/firebase-adapter": "^1.0.3",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
+    "@stripe/stripe-js": "^1.46.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -24,16 +25,19 @@
     "@types/node": "18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.2",
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
+    "firebase-admin": "^11.5.0",
     "flowbite": "^1.6.3",
     "i18n": "^0.15.1",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
     "lodash": "^4.17.21",
+    "micro": "^10.0.1",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
@@ -49,6 +53,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
+    "stripe": "^11.10.0",
     "swiper": "^9.0.1",
     "tailwindcss-rtl": "^0.9.0",
     "typescript": "4.9.4"
