--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
       "@/styles/*": ["styles/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/api/auth/[...nextAuth].js", "pages/api/auth/create-checkout-session.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/api/auth/[...nextAuth].js", "pages/api/auth/create-checkout-session.js", "app/components/Products"],
   "exclude": ["node_modules"]
 }
