--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
     "flowbite": "^1.6.3",
+    "framer-motion": "^9.0.2",
     "i18n": "^0.15.1",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
