--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
     "@types/react": "^18.0.27",
+    "@types/react-detect-offline": "^2.4.1",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
